# mpmc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.linux  README.md  compile_flags.txt  tsan.supp
docs/: ARCHITECTURE.md  PROOF.tex
include/: mpmc.h  mpmc_numa.h  mpmc_seq.h  mseq_announce.h
src/bench/: bench_announce.c  bench_compare.c  bench_fair.c  bench_fair_cxx.cpp  bench_latency.c  bench_mesi.c  bench_pmu.c  bench_scq.c  benchmark.c  queue_ck.c  queue_folly.cpp  queue_interface.h  queue_moodycamel.cpp  queue_mpmc.c  queue_mpmc_numa.c  queue_vyukov.cpp
src/examples/: basic_usage.c  evd_mseq.c  numa_example.c  robot_pipeline.c
src/tests/: main.c  test_common.h
src/tests/mpmc/: test_basic.c  test_capacity.c  test_concurrent.c  test_critical.c  test_edge.c  test_gaps.c  test_invariants.c  test_numa.c  test_ordering.c  test_security.c
